--- a/src/app/modules/admin/pages/admin-home/admin-home.component.html
+++ b/src/app/modules/admin/pages/admin-home/admin-home.component.html
@@ -1,15 +1,6 @@
     <div class="surface-section px-4 py-8 md:px-6 lg:px-8 text-center">
         <div class="grid">
-            <div class="col-12 md:col-4 mb-4 px-5">
-                <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <a routerLink="/admin/panel/survey">
-                        <i class="pi pi-file-edit text-4xl text-blue-500"></i>
-                    </a>
 
-                </span>
-                <div class="text-900 text-xl mb-3 font-medium">Enviar Cuestionario</div>
-                <span class="text-700 line-height-3">Crea y envía un nuevo cuestionario para tus estudiantes.</span>
-            </div>
             <!-- <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
                     <i class="pi pi-lock text-4xl text-blue-500"></i>
@@ -17,6 +8,15 @@
                 <div class="text-900 text-xl mb-3 font-medium">Finalizar cuestionario</div>
                 <span class="text-700 line-height-3">Risus nec feugiat in fermentum posuere urna nec. Posuere sollicitudin aliquam ultrices sagittis.</span>
             </div> -->
+          <div class="col-12 md:col-4 mb-4 px-5">
+                <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
+                    <a routerLink="/admin/panel/roomInfo">
+                        <i class="pi pi-wallet text-4xl text-blue-500"></i>
+                    </a>
+                </span>
+            <div class="text-900 text-xl mb-3 font-medium">Crear Sala</div>
+            <span class="text-700 line-height-3">Únete a una sala e invita a tus estudiantes a formar parte y aprender juntos. </span>
+          </div>
             <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
                     <a routerLink="/admin/panel/dashboard">
@@ -35,15 +35,7 @@
                 <div class="text-900 text-xl mb-3 font-medium">Comentarios y dudas</div>
                 <span class="text-700 line-height-3">Resuelve todas las inquietudes y detalles faltantes de tu clase para mejorar el nivel de enseñanza.</span>
             </div>
-            <div class="col-12 md:col-4 mb-4 px-5">
-                <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
-                    <a routerLink="/admin/panel/roomInfo">
-                        <i class="pi pi-wallet text-4xl text-blue-500"></i>
-                    </a>
-                </span>
-                <div class="text-900 text-xl mb-3 font-medium">Crear Sala</div>
-                <span class="text-700 line-height-3">Únete a una sala e invita a tus estudiantes a formar parte y aprender juntos. </span>
-            </div>
+
           <div class="col-12 md:col-4 mb-4 px-5">
                 <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
                     <a routerLink="/admin/panel/flashquestions">
@@ -52,6 +44,16 @@
                 </span>
             <div class="text-900 text-xl mb-3 font-medium">Flashquestions</div>
             <span class="text-700 line-height-3">Envía una pregunta de manera efectiva.</span>
+          </div>
+          <div class="col-12 md:col-4 mb-4 px-5">
+                <span class="p-3 shadow-2 mb-3 inline-block surface-card" style="border-radius: 10px">
+                    <a routerLink="/admin/panel/survey">
+                        <i class="pi pi-file-edit text-4xl text-blue-500"></i>
+                    </a>
+
+                </span>
+            <div class="text-900 text-xl mb-3 font-medium">Enviar Cuestionario (Un solo envío)</div>
+            <span class="text-700 line-height-3">Envía un nuevo cuestionario predefinido para tus estudiantes.</span>
           </div>
         </div>
     </div>
