--- a/src/app/modules/admin/pages/room-info/room-info.component.html
+++ b/src/app/modules/admin/pages/room-info/room-info.component.html
@@ -8,11 +8,15 @@
         <form [formGroup]="myFormRoom" class="form-container__-form" (ngSubmit)="createRoom()">
 
             <div class="text-center">
-                <label for="email1" class="block text-900 font-medium mb-2">Nombre de la sala</label>
-                <input id="email1" formControlName="roomName" type="text" placeholder="Nombre" pInputText
-                    class="w-full mb-3 input-limited-width" [class.is-valid]="isRoomNameValid"
-                    [class.is-invalid]="isRoomNameInvalid">
-            </div>
+    <label for="email1" class="block text-900 font-medium mb-2">Nombre de la sala</label>
+    <input id="email1" formControlName="roomName" type="text" placeholder="Nombre" pInputText
+        class="w-full mb-3 input-limited-width" [class.is-valid]="isRoomNameValid"
+        [class.is-invalid]="isRoomNameInvalid">
+        <div *ngIf="myFormRoom.get('roomName')?.errors?.['maxlength']" class="text-red-500">
+    El nombre de la sala no puede exceder los 10 caracteres.
+</div>
+              <br>
+</div>
             <div class="text-center">
                 <button type="submit" pButton pRipple label="Crear sala" icon="pi pi-sign-in"
                     class="w-full btn-limited-width" [class.is-enabled]="isRoomNameValid">
