--- a/src/app/modules/admin/components/emotions-chart/emotions-chart.component.html
+++ b/src/app/modules/admin/components/emotions-chart/emotions-chart.component.html
@@ -1,4 +1,12 @@
-    <div class="card">
-        <h5 >Emociones</h5>
-        <p-chart id="emotionsChart" type="radar" [data]="radarData" [options]="pieOptions"></p-chart>
-    </div>
+<div class="emotions-chart-container">
+  <div class="card">
+    <h5 class="chart-title">Emociones de los Estudiantes en Tiempo Real</h5>
+    <p-chart
+      id="emotionsChart"
+      type="bar"
+      [data]="barData"
+      [options]="barOptions"
+      styleClass="chart"
+    ></p-chart>
+  </div>
+</div>
