--- a/src/app/modules/admin/components/layout/app.topbar.component.html
+++ b/src/app/modules/admin/components/layout/app.topbar.component.html
@@ -1,7 +1,7 @@
 <div class="layout-topbar">
   <a class="app-logo" routerLink="/admin/panel">
     <img alt="app logo" [src]="logo">
-    <span class="app-name">Verona</span>
+    <span class="app-name">MoTe</span>
   </a>
 
   <button #menubutton class="topbar-menubutton p-link" type="button" (click)="onMenuButtonClick()">
