add ui ux and adjust details

--- a/src/app/modules/admin/components/layout/app.footer.component.html
+++ b/src/app/modules/admin/components/layout/app.footer.component.html
@@ -2,8 +2,11 @@
     <div class="footer-start">
         <img [src]="'assets/logos/main-logo.svg'" alt="logo" />
         <span class="app-name">MoTe</span>
+
     </div>
+
     <div class="footer-end">
-        <span>© Universidad de Cuenca</span>
+        <span>© Universidad de Cuenca - </span>
+      Powered by <a href="https://www.ucuenca.edu.ec/innovacion-educativa/" target="_blank">Dirección de Innovación Educativa</a>
     </div>
 </div>
