--- a/src/app/modules/admin/components/layout/app.topbar.component.html
+++ b/src/app/modules/admin/components/layout/app.topbar.component.html
@@ -25,6 +25,7 @@
   <div class="topbar-search" [ngClass]="{'topbar-search-active': searchActive}">
 <!--    <button class="topbar-searchbutton p-link" type="button" (click)="activateSearch()">-->
 <!--      <i class="pi pi-search"></i>-->
+<!--      <i class="pi pi-search"></i>-->
 <!--    </button>-->
 
     <div class="search-input-wrapper">
